[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprites/Bat_sprite.png" type="Texture" id=1]
[ext_resource path="res://Bat.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Hurtbox.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 7.0
height = 6.0

[node name="Bat" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
exploration_interval = 2
speed = 75
detect_player = 200

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Explore" type="Timer" parent="."]
wait_time = 5.0

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 5 )

[connection signal="tree_exited" from="." to="." method="_on_Bat_tree_exited"]
[connection signal="timeout" from="Explore" to="." method="_on_Explore_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
